# Teach-Industrial-Robots

./: .gitignore  Doxyfile  README.md  project.launch  start_tir.sh
doxygen/html/: affected__joints_8hpp_source.html  annotated.html  azure__kinect_8hpp_source.html  azure__kinect__gestures_8hpp_source.html  classes.html  classgestures_1_1Gesture-members.html  classgestures_1_1Gesture.html  classgestures_1_1GestureGroup-members.html  classgestures_1_1GestureGroup.html  classgestures_1_1GesturesBase-members.html  classgestures_1_1GesturesBase.html  classgestures_1_1GesturesBase__coll__graph.map  classgestures_1_1GesturesBase__coll__graph.md5  classgestures_1_1GesturesBase__inherit__graph.map  classgestures_1_1GesturesBase__inherit__graph.md5  classgestures_1_1GesturesEngine.html  (+123 more)
interbotix_robot_arms_wrapper/: CMakeLists.txt  package.xml
robot_arm_common/: CMakeLists.txt  package.xml
robot_arm_interface/: CMakeLists.txt  package.xml
simple_gestures/: CMakeLists.txt  package.xml
simple_gestures/include/simple_gestures/gestures/: gesture.hpp  gesture_group.hpp  gestures_base.hpp  gestures_engine.hpp  gestures_query.hpp
simple_gestures/include/simple_gestures/kinect/: azure_kinect.hpp  azure_kinect_gestures.hpp
simple_gestures/src/common/: angle_converter.cpp  angle_converter.hpp  vector3.cpp  vector3.hpp
simple_gestures/src/gestures/: gesture.cpp  gesture_group.cpp  gesture_group.hpp  gesture_group_item.cpp  gesture_group_item.hpp  gesture_item.cpp  gesture_item.hpp  gestures_engine.cpp
simple_gestures/src/kinect/: azure_kinect.cpp  azure_kinect_gestures.cpp
teach_industrial_robots/: CMakeLists.txt  package.xml
teach_industrial_robots_gazebo/: CMakeLists.txt  package.xml
(+135 files in other folders)
